2009-11-16  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclEncoding.c: (Backport) Fix [Bug 2891556] and improve
	* tests/econding.test:   test to detect similar manifestations in the future.
	
2009-11-12  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): [Bug 2895565]. Dropped bogosity
	* tests/io.test: which used the number of _written_ bytes or
	character to update the counters for the read bytes/characters.
	New test io-53.11. This is a backward port from the 8.5 branch.

2009-11-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/fCmd.test:     Fixed a number of issues for Vista
	* tests/registry.test: and Win7 that are due to restricted
	* tests/tcltest.test:  permissions under UAC.
	* tests/winFCmd.test:

2009-11-10  Stuart Cassoff <stwo@users.sf.net>

	* win/README: [bug 2459744]: Removed outdated Msys + Mingw info.

2009-11-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tclObj.c: Plug memory leak in TclContinuationsEnter().
	[Bug 2895323]. Backport from Tcl 8.5 branch, change by Don Porter.

2009-11-09  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c (TclEvalObjEx): Moved the #280 decrement of
	refCount for the file path out of the branch after the whole
	conditional, closing a memory leak. Added clause on structure type
	to prevent seg.faulting. Backport from valgrinding the Tcl 8.5
	branch.

	* tests/info.test: Resolve ambiguous resolution of variable
	"res". Backport from 8.5

2009-10-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCompCmds.c: [Bug 2881263] (TclCompileForeachCmd,
	TclCompileLindexCmd): Fixed. Moved the use of
	DefineLineInformation after all regular variable declarations, so
	that an empty statement (-UTIP_280) doesn't confuse c89 compilers.

	* library/platform/pkgIndex.tcl: Backported the platform packages
	* library/platform/platform.tcl: from head and8.5 into the 8.4
	* library/platform/shell.tcl: branch. Updated makefiles to install